--- a/content/downloads/win.html
+++ b/content/downloads/win.html
@@ -22,7 +22,7 @@ aliases:
           let ago = "" + daysAgo + " days ago"
 
           const handwave = (exact, unit) => {
-            const rest = (count) => "" + count + " " + unit + (unit > 1 ? "s" : "")
+            const rest = (count) => `${count} ${unit}${unit > 1 ? "s" : ""} ago`
 
             const roundedDown = Math.floor(exact)
             const fract = exact - roundedDown
