fixup! Convert the Windows downloads page to Hugo

--- a/content/downloads/win.html
+++ b/content/downloads/win.html
@@ -77,7 +77,7 @@ aliases:
     <code>winget install --id Git.Git -e --source winget</code>
   </p>
   <p class="small">
-    The current source code release is version <strong>{{< site-param windows_installer.installer64.version >}}</strong>.
+    The current source code release is version <strong>{{< site-param latest_version >}}</strong>.
     If you want the newer version, you can build it from <a href="https://github.com/git-for-windows/git">the source code</a>.
   </p>
 
